2 files modified, 4 added

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -2,7 +2,8 @@
 <table>
   <tr *ngFor="let product of products">
       <td>{{ product.name }}</td>
-      <td> <a [title]="'go to '+ product.name + ' details'">:></a></td>
+      <td> <a [title]="'go to '+ product.name + ' details'"
+              [routerLink]="['/products', product.id]">:></a></td>
   </tr>
 </table>
 
