--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <h2>Products</h2>
 <table>
   <tr *ngFor="let x of productxxx">
-    <td>{{ product.name }}</td>
+    <td>{{ x.name }}</td>
     <td>
       <a
         [title]="'go to ' + x.name + ' details'"
